--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,19 @@
+server.port = 9000
+
+#H2 db configuration
 spring.datasource.url=jdbc:h2:mem:sbaonedb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Logging configuration
+logging.level.org.sba.SpringBootAssignment = TRACE
+logging.pattern.console = %d [%level] %c{1.} [%t] %m%n
+logging.file.name = appLog.log
+logging.pattern.file = %d [%level] %c{1.} [%t] %m%n
+
+#Hybernate configuration
+spring.jpa.hibernate.dll-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+spring.jpa.show-sql = true
